2011-03-01  Michael Wiegand <michael.wiegand@greenbone.net>

	* misc/arglists.c (str2arglist): Fix handling of input string.
	Inserting null bytes into the string caused resulting arglists to end
	prematurely.

2011-02-23  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 4.0.3.

2011-02-23  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-libraries 4.0.2 release.

	* CHANGES: Updated.

2011-02-23  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* doc/example.auth.conf: Fixed parameter name as spotted by Michael
	Wiegand.

2011-02-23  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* doc/example.auth.conf: Corrected comment about which parameter
	to pass to cmake in order to compile libraries with LDAP-support.
	Switch example to "enable" keyword.

2011-02-22  Michael Wiegand <michael.wiegand@greenbone.net>

	* CMakeLists.txt: Ensure that tools/openvas-lsc-rpm-creator.sh gets
	installed to the location OpenVAS Manager expects it to be.

2011-02-21  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 4.0.2.

2011-02-21  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-libraries 4.0.1 release.

	* CHANGES: Updated.

2011-02-16  Michael Wiegand <michael.wiegand@greenbone.net>

	* misc/openvas_auth.c (openvas_is_user_admin): Make check for
	administrative privileges stricter; isadmin is expected to be a
	regular file.

2011-02-15  Chandrashekhar B <bchandra@secpod.com>

	* misc/pcap.c (v6_getinterfaces): Fixed a segfault issue
	when null ifaddrs struct is encountered.

2011-02-08  Michael Wiegand <michael.wiegand@greenbone.net>

	* CMakeLists.txt: Replace call to deprecated exec_program with
	execute_process.

2011-02-07  Michael Wiegand <michael.wiegand@greenbone.net>

	* doc/wmi-howto.txt: Fix date.

2011-02-07  Michael Wiegand <michael.wiegand@greenbone.net>
